# KeepWise

./: .gitignore  AGENTS.md  CEO_REQ.md  DEVELOPMENT_PLAN.md  README.md  run_keepwise_app.sh  run_m0_app.sh  run_report.sh
.github/workflows/: tauri-desktop-check.yml  tauri-desktop-release-candidate.yml  tauri-desktop-release-signed-macos-template.yml
apps/keepwise-legacy/: run_keepwise_app.sh  run_report.sh
apps/keepwise-tauri/: README.md  package-lock.json  package.json
apps/keepwise-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.mobile-preview.conf.json
apps/keepwise-tauri/src-tauri/icons/: icon.icns
apps/keepwise-tauri/src-tauri/src/: account_catalog.rs  admin_health.rs  budget_fire_analytics.rs  cmb_bank_pdf_import.rs  cmb_eml_import.rs  commands.rs  investment_analytics.rs  ledger_db.rs  lib.rs  main.rs  read_queries.rs  record_mutations.rs  rules_management.rs  rules_store.rs  transaction_mutations.rs  wealth_analytics.rs  yzxy_import.rs
scripts/: build_keepwise_desktop_local.sh  check_runtime_db_health.py  http_route_tables.py  import_classified_to_ledger.py  import_cmb_bank_pdf_transactions.py  import_youzhiyouxing_investments.py  investment_analytics_service.py  keepwise_web_app.py  m0_http_route_tables.py  m0_investment_analytics_service.py  m0_m4_analytics_service.py  m0_rules_service.py  m0_wealth_analytics_service.py  m0_web_app.py  migrate_ledger_db.py  prepare_keepwise_desktop_release.sh  validate_m1_analytics.py  validate_tauri_core_diff_regression.sh  validate_tauri_desktop_release_check.sh  validate_tauri_desktop_rust_regression.sh
(+121 files in other folders)
